split harvest calculator into modules

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,7 +28,7 @@ setup_requires =
 
 [options.entry_points]
 console_scripts =
-    harvest-invoice-calculator = harvest_invoice_calculator:main
+    harvest-invoice-calculator = harvest_invoice_calculator.cli:main
 
 [bdist_wheel]
 universal = true
