add sevdesk invoicer

--- a/.envrc.local-template
+++ b/.envrc.local-template
@@ -1,3 +1,6 @@
 # Create a personal access tokens at https://id.getharvest.com/developers
 export HARVEST_ACCOUNT_ID=<TODO>
 export HARVEST_BEARER_TOKEN=<TODO>
+
+# optional: sevdesk credentials
+#export SEVDESK_API_TOKEN=<TODO>
