--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
-name = harvest-invoice-calculator
+name = harvest-exporter
 version = 0.0.1
 author = Jörg Thalheim
 author-email = joerg@thalheim.io
-home-page = https://github.com/numtide/numtide-invoice-generator
+home-page = https://github.com/numtide/harvest-invoice-calculator
 description = Export and aggregated harvest time recordings to generate bills
 license = MIT
 platform = any
@@ -28,7 +28,7 @@ setup_requires =
 
 [options.entry_points]
 console_scripts =
-    harvest-invoice-calculator = harvest_invoice_calculator.cli:main
+    harvest-exporter = harvest_exporter.cli:main
 
 [bdist_wheel]
 universal = true
