introduce HARVEST_USER
make it so that the user can filter the reports by default

--- a/.envrc.local-template
+++ b/.envrc.local-template
@@ -2,5 +2,8 @@
 export HARVEST_ACCOUNT_ID=<TODO>
 export HARVEST_BEARER_TOKEN=<TODO>
 
+# Used to filter exports
+export HARVEST_USER="<YOUR NAME>"
+
 # optional: sevdesk credentials
 #export SEVDESK_API_TOKEN=<TODO>
