--- a/.envrc.local-template
+++ b/.envrc.local-template
@@ -7,3 +7,7 @@ export HARVEST_USER="<YOUR NAME>"
 
 # optional: sevdesk credentials
 #export SEVDESK_API_TOKEN=<TODO>
+
+# To use havest-submit-week
+export HARVEST_EMAIL=""
+export HARVEST_PASSWORD=""
