--- a/wise-exporter/setup.cfg
+++ b/wise-exporter/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
-name = transferwise-exporter
+name = wise-exporter
 version = 0.0.1
 author = Jörg Thalheim
 author-email = joerg@thalheim.io
 home-page = https://github.com/numtide/numtide-invoice-generator
-description = Export Transferwise bank statements
+description = Export Wise bank statements
 license = MIT
 platform = any
 classifiers =
@@ -28,7 +28,7 @@ setup_requires =
 
 [options.entry_points]
 console_scripts =
-    transferwise-exporter = transferwise_exporter:main
+    wise-exporter = wise_exporter:main
 
 [bdist_wheel]
 universal = true
