--- a/sevdesk-invoicer/setup.cfg
+++ b/sevdesk-invoicer/setup.cfg
@@ -29,6 +29,7 @@ setup_requires =
 [options.entry_points]
 console_scripts =
     sevdesk-invoicer = sevdesk_invoicer:main
+    sevdesk-wise-importer = sevdesk_wise_importer:main
 
 [bdist_wheel]
 universal = true
