--- a/setup.cfg
+++ b/setup.cfg
@@ -29,6 +29,7 @@ setup_requires =
 [options.entry_points]
 console_scripts =
     harvest-exporter = harvest_exporter.cli:main
+    harvest-report = harvest_report.cli:main
 
 [bdist_wheel]
 universal = true
