--- a/sevdesk-invoicer/pyproject.toml
+++ b/sevdesk-invoicer/pyproject.toml
@@ -34,7 +34,7 @@ find = {}
 target-version = "py310"
 line-length = 88
 
-select = ["E", "F", "I"]
+select = ["E", "F", "I", "U"]
 ignore = ["E501"]
 
 [tool.mypy]
