add income tax estimator

--- a/sevdesk-invoicer/pyproject.toml
+++ b/sevdesk-invoicer/pyproject.toml
@@ -26,6 +26,7 @@ Homepage = "https://github.com/numtide/numtide-invoice-generator"
 sevdesk-invoicer = "sevdesk_invoicer:main"
 sevdesk-wise-importer = "sevdesk_wise_importer:main"
 sevdesk-upload = "sevdesk_upload:main"
+sevdesk-tax-estimator = "sevdesk_tax_estimator:main"
 
 [tool.setuptools.packages]
 find = {}
