--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ ignore = [
   "ARG001",
   "ARG002",
 
+  "DTZ", # we don't care about timezone stuff
+
   # Missing type annotation for `self` in method
   "ANN101",
   # Dynamically typed expressions (typing.Any)
