--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,16 +1,7 @@
 queue_rules:
   - name: default
     merge_conditions:
-      - check-success=Evaluate flake.nix
-      - check-success=check treefmt [x86_64-linux]
-      - check-success=devShell default [x86_64-linux]
-      - check-success=package default [x86_64-linux]
-      - check-success=package harvest-exporter [x86_64-linux]
-      - check-success=package harvest-report [x86_64-linux]
-      - check-success=package sevdesk [x86_64-linux]
-      - check-success=package sevdesk-invoicer [x86_64-linux]
-      - check-success=package wise-exporter [x86_64-linux]
-      - check-success=package working-days-calculator [x86_64-linux]
+      - check-success=buildbot/nix-build
     merge_method: rebase
 
 pull_request_rules:
